packages/react-server/examples/basic/src/routes/test/error/page.tsx
export default async function Page() {
  throw new Error("boom!");
  return <></>;
}
